Fixed overflow on tags

--- a/src/app/components/TagMenuContent/styles.css
+++ b/src/app/components/TagMenuContent/styles.css
@@ -20,4 +20,5 @@
 	border: 0 !important;
 	width: 100%;
 	min-width: 100px;
+	margin-top: 2px;
 }
